[PERF] Fasten Username and Domain core object parsing
 - Avoid allocation of substring
 - Avoid stream logic
 - Groups charmatcher checks.
 - Avoid needless operations in Username

This delivers a 5 fold performance enhancement on a code
path often called (event deserialization, JMAP auth,
 Cassandra mailbox queries). Memory allocation is also
 greatly reduced.